push 27_11_2019 11h z-index fix

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -19,7 +19,7 @@ body {
     background-color: rgba(80, 80, 80, 0);
     border: none;
     backdrop-filter: blur(10px);
-    z-index: 2;
+    z-index: 3;
 }
 
 #menu ul, #menu li {
@@ -57,6 +57,7 @@ body {
     display: block;
     width: 100%;
     position: absolute;
+    z-index: 2;
 }
 
 #menu ul li a img {
@@ -230,7 +231,7 @@ h1 {
     #menu {
         display: block;
         margin: 0;
-        z-index: 10;
+        z-index: 2;
         position: relative;
     }
 
@@ -246,6 +247,7 @@ h1 {
     }
 
     #Equipe {
+        z-index: 1;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
